@@ -1,3 +1,5 @@
+* #3003 Make image drags on the clipboard work consistently. (marco)
+
 Snapshot 8ef6c57f8b
 
 * #3478 Fix handling of non-default types. (bertf)
